--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
 	"scripts": {
 		"test": "test"
 	},
+	"repository" :
+	{
+		"type" : "git",
+	 	"url" : "https://github.com/vcasinha/universe.git"
+	},
 	"author": {
 		"name" : "Vladimiro Casinha",
 		"email" : "vcasinha@gmail.com",
